--- a/index.html
+++ b/index.html
@@ -177,16 +177,11 @@
 				<h2 id="view-title" class="text-lg font-black uppercase italic tracking-tighter leading-none text-white/30">Dashboard</h2>
 			</div>
 
-			<!-- SECCIÓN CENTRAL: EL LOGO Y NOMBRE (BIEN GRANDES) -->
-			<div class="flex-[3] flex items-center justify-center gap-6">
-				<div class="relative group">
-					<img src="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true" 
-						alt="Logo" 
-						class="w-20 h-20 object-contain logo-viking-glow drop-shadow-[0_0_20px_rgba(255,0,0,0.6)] transition-transform duration-500 group-hover:scale-110">
-				</div>
-				<h1 class="text-6xl md:text-7xl font-black italic uppercase leading-none tracking-tighter text-white">
-					GYMFIT <span class="viking-red">PRO</span>
-				</h1>
+			<!-- SECCIÓN CENTRAL: LOGO UNIFICADO -->
+			<div class="flex-[3] flex items-center justify-center">
+				<img src="https://github.com/vikingo-44/Software-Gym/blob/main/logo_titulo.png?raw=true" 
+					alt="GymFit Pro" 
+					class="h-22 md:h-24 w-auto object-contain logo-viking-glow drop-shadow-[0_0_25px_rgba(255,0,0,0.5)] transition-transform duration-500 hover:scale-105">
 			</div>
 
 			<!-- SECCIÓN DERECHA: Status y Salir -->
