--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 			<!-- SECCIÓN IZQUIERDA: Info de Vista (Más chica para no estorbar) -->
 			<div class="hidden lg:flex flex-1 flex-col">
 				<p id="breadcrumb" class="text-[9px] font-black viking-red uppercase tracking-[0.4em] italic leading-none mb-1">CENTRAL DE MANDO</p>
-				<h2 id="view-title" class="text-lg font-white uppercase italic tracking-tighter leading-none text-white/30">Dashboard</h2>
+				<h2 id="view-title" class="text-lg font-black text-white uppercase italic tracking-tighter leading-none text-white/30">Dashboard</h2>
 			</div>
 
 			<!-- SECCIÓN CENTRAL: LOGO UNIFICADO -->
