--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <!-- FORMULARIO DE LOGIN -->
             <div id="login-form-container">
-                <h1 class="text-4xl font-black italic uppercase mb-2">GYMFIT <span class="viking-red">PRO</span></h1>
+                <h1 class="text-4xl font-black italic uppercase mb-2">BIEN<span class="viking-red">VENIDO</span></h1>
                 <p class="text-[11px] tracking-[0.5em] text-gray-500 uppercase mb-10">Acceso al Sistema</p>
                 
                 <form onsubmit="handleLogin(event)" class="space-y-4">
@@ -174,7 +174,7 @@
 			<!-- SECCIÓN IZQUIERDA: Info de Vista (Más chica para no estorbar) -->
 			<div class="hidden lg:flex flex-1 flex-col">
 				<p id="breadcrumb" class="text-[9px] font-black viking-red uppercase tracking-[0.4em] italic leading-none mb-1">CENTRAL DE MANDO</p>
-				<h2 id="view-title" class="text-lg font-black text-white uppercase italic tracking-tighter leading-none text-white/30">Dashboard</h2>
+				<h2 id="view-title" class="text-lg font-black uppercase italic tracking-tighter leading-none text-white">Dashboard</h2>
 			</div>
 
 			<!-- SECCIÓN CENTRAL: LOGO UNIFICADO -->
