--- a/index.html
+++ b/index.html
@@ -1125,8 +1125,7 @@
 
 					<div class="space-y-1">
 						<p class="text-[9px] font-black text-gray-500 uppercase px-2">Nombre del Producto</p>
-						<<input type="text" id="stock-nombre" placeholder="Ej: Powerade Rojo" required class="viking-input" 
-       					oninput="if(this.value.trim()){ const p = this.value.trim().split(' '); const img = p[p.length-1].toLowerCase() + '.png'; const preview = document.getElementById('stock-img-preview'); preview.src = `https://github.com/vikingo-44/Software-Gym/blob/main/imagenes/${img}?raw=true`; preview.onerror = function(){ this.src = 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII='; }; }">
+						<input type="text" id="stock-nombre" placeholder="Ej: Agua Mineral 500ml" required class="viking-input">
 					</div>
 
 					<div class="grid grid-cols-2 gap-4">
@@ -1139,26 +1138,6 @@
 							<input type="number" id="stock-precio" placeholder="0" required class="viking-input">
 						</div>
 					</div>
-
-					<!-- CARGA DE IMAGEN DESDE ORDENADOR -->
-					<div class="space-y-1">
-						<p class="text-[9px] font-black text-red-600 uppercase px-2 italic">Enlace de la Imagen (GitHub u otro)</p>
-						<div class="flex flex-col gap-3">
-							<!-- Input para pegar el link -->
-							<input type="text" id="stock-url-images" 
-								placeholder="https://github.com/.../imagen.png?raw=true" 
-								class="viking-input" 
-								oninput="document.getElementById('stock-img-preview').src = this.value">
-							
-							<!-- Vista previa en tiempo real -->
-							<div class="w-full h-32 rounded-2xl bg-white/5 border border-dashed border-white/10 flex items-center justify-center overflow-hidden">
-								<img id="stock-img-preview" src="" class="w-full h-full object-cover" 
-									onerror="this.src='https://via.placeholder.com/150/333/fff?text=Vista+Previa'">
-							</div>
-							<p class="text-[8px] text-gray-500 px-2 italic">Tip: Sube la foto a GitHub, copia el "Download link" y agrégale ?raw=true al final.</p>
-						</div>
-					</div>
-
 					<div class="flex gap-4 pt-6">
 						<button type="button" onclick="closeModal('modal-stock')" class="flex-1 py-4 bg-white/5 rounded-2xl font-black uppercase italic text-[11px]">Cancelar</button>
 						<button type="button" id="btn-delete-stock" class="hidden py-4 px-4 bg-red-900/40 rounded-2xl font-black uppercase italic text-[11px] text-red-500">Eliminar</button>
