--- a/index.html
+++ b/index.html
@@ -1138,6 +1138,32 @@
 							<input type="number" id="stock-precio" placeholder="0" required class="viking-input">
 						</div>
 					</div>
+
+					<!-- CARGA DE IMAGEN DESDE ORDENADOR -->
+					<div class="space-y-1">
+						<p class="text-[9px] font-black text-red-600 uppercase px-2 italic">Imagen del Producto</p>
+						<div class="flex flex-col gap-3">
+							<!-- Vista previa -->
+							<div id="stock-img-preview-container" class="w-full h-32 rounded-2xl bg-white/5 border border-dashed border-white/10 flex items-center justify-center overflow-hidden">
+								<img id="stock-img-preview" src="" class="hidden w-full h-full object-cover">
+								<div id="stock-img-placeholder" class="text-gray-600 flex flex-col items-center">
+									<i data-lucide="image-plus" class="w-8 h-8 mb-1"></i>
+									<span class="text-[8px] font-black uppercase">Sin Imagen</span>
+								</div>
+							</div>
+							
+							<!-- Botón oculto y label estético -->
+							<label for="stock-file-input" class="w-full py-3 bg-white/5 border border-white/10 rounded-xl text-[10px] font-black uppercase italic text-center cursor-pointer hover:bg-white/10 transition-all flex items-center justify-center gap-2">
+								<i data-lucide="upload-cloud" class="w-4 h-4"></i>
+								Seleccionar desde ordenador
+							</label>
+							<input type="file" id="stock-file-input" accept="image/*" class="hidden" onchange="previewStockImage(event)">
+							
+							<!-- Campo oculto para guardar el Base64 -->
+							<input type="hidden" id="stock-imagen-base64">
+						</div>
+					</div>
+
 					<div class="flex gap-4 pt-6">
 						<button type="button" onclick="closeModal('modal-stock')" class="flex-1 py-4 bg-white/5 rounded-2xl font-black uppercase italic text-[11px]">Cancelar</button>
 						<button type="button" id="btn-delete-stock" class="hidden py-4 px-4 bg-red-900/40 rounded-2xl font-black uppercase italic text-[11px] text-red-500">Eliminar</button>
