--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
     <div id="login-overlay">
         <div class="glass-card p-12 rounded-[3rem] w-full max-w-md border-red-600/20 text-center mx-4 relative overflow-hidden">
-            <div class="w-32 h-32 mx-auto mb-8 logo-viking-glow bg-black rounded-full flex items-center justify-center overflow-hidden">
-                <img src="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true" alt="Vikingo Logo" class="w-full h-full object-cover" onerror="this.src='https://via.placeholder.com/150/FF0000/000000?text=VIKINGO'">
+            <div class="w-full max-w-[320px] h-auto mx-auto mb-10 logo-viking-glow flex items-center justify-center">
+                <img src="https://github.com/vikingo-44/Software-Gym/blob/main/gymfitpro.png?raw=true" 
+                     alt="GymFit Pro" 
+                     class="w-full h-auto object-contain" 
+                     onerror="this.src='https://via.placeholder.com/397x65/FF0000/000000?text=GYMFIT+PRO'">
             </div>
 
             <!-- FORMULARIO DE LOGIN -->
@@ -178,10 +181,11 @@
 			</div>
 
 			<!-- SECCIÓN CENTRAL: LOGO UNIFICADO -->
-			<div class="flex-[3] flex items-center justify-center">
+			<div class="w-full max-w-[280px] h-auto mx-auto mb-10 logo-viking-glow flex items-center justify-center">
 				<img src="https://github.com/vikingo-44/Software-Gym/blob/main/gymfitpro.png?raw=true" 
 					alt="GymFit Pro" 
-					class="h-22 md:h-24 w-auto object-contain logo-viking-glow drop-shadow-[0_0_25px_rgba(255,0,0,0.5)] transition-transform duration-500 hover:scale-105">
+					class="w-full h-auto object-contain" 
+					onerror="this.src='https://via.placeholder.com/397x65/FF0000/000000?text=GYMFIT+PRO'">
 			</div>
 
 			<!-- SECCIÓN DERECHA: Status y Salir -->
