--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <!-- FORMULARIO DE LOGIN -->
             <div id="login-form-container">
-                <h1 class="text-4xl font-black italic uppercase mb-2">BIEN<span class="viking-red">VENIDO</span></h1>
+                <h1 class="text-4xl font-black italic uppercase mb-2">BIENVENIDO</h1>
                 <p class="text-[11px] tracking-[0.5em] text-gray-500 uppercase mb-10">Acceso al Sistema</p>
                 
                 <form onsubmit="handleLogin(event)" class="space-y-4">
@@ -174,17 +174,17 @@
 				<i data-lucide="menu"></i>
 			</button>
 			
-			<!-- SECCIÓN IZQUIERDA: Info de Vista (Más chica para no estorbar) -->
+			<!-- SECCIÓN IZQUIERDA: Info de Vista -->
 			<div class="hidden lg:flex flex-1 flex-col">
 				<p id="breadcrumb" class="text-[9px] font-black viking-red uppercase tracking-[0.4em] italic leading-none mb-1">CENTRAL DE MANDO</p>
 				<h2 id="view-title" class="text-lg font-black uppercase italic tracking-tighter leading-none text-white">Dashboard</h2>
 			</div>
 
-			<!-- SECCIÓN CENTRAL: LOGO UNIFICADO -->
-			<div class="w-full max-w-[250px] h-auto mx-auto mt-20 logo-viking-glow flex items-center justify-center">
+			<!-- SECCIÓN CENTRAL: LOGO CENTRADO Y AGRANDADO -->
+			<div class="flex-[2] flex items-center justify-center">
 				<img src="https://github.com/vikingo-44/Software-Gym/blob/main/gymfitpro2.png?raw=true" 
 					alt="GymFit Pro" 
-					class="w-full h-auto object-contain" 
+					class="w-full max-w-[280px] md:max-w-[300px] h-auto object-contain logo-viking-glow drop-shadow-[0_0_25px_rgba(255,0,0,0.5)] transition-transform duration-500 hover:scale-105" 
 					onerror="this.src='https://via.placeholder.com/397x65/FF0000/000000?text=GYMFIT+PRO'">
 			</div>
 
