--- a/index.html
+++ b/index.html
@@ -639,8 +639,10 @@
 
 				<!-- LISTADO DE ALUMNOS (CONTENEDOR DONDE EL JS INYECTARÁ LOS DATOS) -->
 				<!-- Nota: Le puse space-y-3 para separar las tarjetas igual que en Staff -->
-				<div id="lista-alumnos-container" class="space-y-3 min-h-[400px] overflow-y-auto custom-scrollbar flex-1 pr-2 pb-10">
-					<!-- El JS llenará esto -->
+				<div class="glass-card p-8 rounded-[3rem] border border-white/5 mb-10">
+					<div id="lista-alumnos-container" class="space-y-3 h-[600px] overflow-y-auto custom-scrollbar pr-2">
+						<!-- El JS llenará esto -->
+					</div>
 				</div>
 			</div>
 
