--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 					</span>
 				</button>
 				<div id="sub-staff" class="hidden pl-12 space-y-3 pb-4 mt-1">
-					<button onclick="switchView('profesores')" id="nav-profesores" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">• Profesores</button>
-					<button onclick="switchView('administrativos')" id="nav-administrativos" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">• Administrativos</button>
+					<button onclick="switchView('profesores')" id="nav-profesores" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">Profesores</button>
+					<button onclick="switchView('administrativos')" id="nav-administrativos" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">Administrativos</button>
 				</div>
 			</div>
 		</div>
@@ -128,9 +128,9 @@
 					</span>
 				</button>
 				<div id="sub-facturacion" class="hidden pl-12 space-y-3 pb-4 mt-1">
-					<button onclick="switchView('cobrar')" id="nav-cobrar" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">• Cobrar</button>
-					<button onclick="switchView('caja')" id="nav-caja" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">• Caja</button>
-					<button onclick="switchView('stock')" id="nav-stock" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">• Stock</button>
+					<button onclick="switchView('cobrar')" id="nav-cobrar" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">Cobrar</button>
+					<button onclick="switchView('caja')" id="nav-caja" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">Caja</button>
+					<button onclick="switchView('stock')" id="nav-stock" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">Stock</button>
 				</div>
 			</div>
 		</div>
