--- a/index.html
+++ b/index.html
@@ -1059,15 +1059,15 @@
 					NUEVO <span class="text-red-600">MOVIMIENTO</span>
 				</h3>
 				
-				<!-- FORMULARIO -->
-				<form onsubmit="guardarMovimiento(event)">
+				<!-- FORMULARIO - Llamamos a la función global -->
+				<form onsubmit="window.guardarMovimiento(event)">
 					<div class="space-y-4">
 						
 						<!-- Selector Tipo -->
 						<div>
 							<label class="block text-[10px] font-bold uppercase text-gray-400 mb-1">Tipo de Movimiento</label>
 							<select id="input-tipo-movimiento" 
-									onchange="toggleCamposCompra(this.value)"
+									onchange="window.toggleCamposCompra(this.value)"
 									class="viking-input w-full p-3 rounded text-xs font-bold text-white bg-black/50 border border-white/10 focus:border-red-600 transition-colors">
 								<option value="Ingreso" selected>INGRESO (Venta, Cuota, etc.)</option>
 								<option value="Gasto">EGRESO (Gasto General, Pago)</option>
@@ -1080,7 +1080,7 @@
 							<div>
 								<label class="block text-[10px] font-bold uppercase text-red-500 mb-1">Seleccionar Producto</label>
 								<select id="input-producto-stock" class="viking-input w-full p-3 rounded text-xs font-bold text-white bg-black/50 border border-white/10">
-									<!-- Se llena dinámicamente mediante JS en script.js -->
+									<!-- Se llena dinámicamente mediante JS -->
 								</select>
 							</div>
 							<div>
