--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/style.css">
 	<link rel="icon" type="image/png" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
 	<link rel="apple-touch-icon" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
+	<script src="script.js"></script>
+
 </head>
 <body class="flex h-screen w-screen overflow-hidden text-left">
 
