--- a/index.html
+++ b/index.html
@@ -1313,5 +1313,35 @@
 	<!-- Script fuera para que tome la lista de alumnos -->
 	<script src="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/script.js"></script>
 
+	<script>
+		window.toggleCamposCompra = function(tipo) {
+			const camposCompra = document.getElementById('campos-compra-mercaderia');
+			const containerDesc = document.getElementById('container-desc-gasto');
+			const descInput = document.getElementById('input-desc-gasto');
+			const productoSelect = document.getElementById('input-producto-stock');
+
+			if (tipo === 'Compra') {
+				if (camposCompra) camposCompra.classList.remove('hidden');
+				if (containerDesc) containerDesc.classList.add('opacity-40');
+				if (descInput) descInput.required = false;
+				
+				// Obtenemos el stock del estado global
+				const currentStock = window.state?.stock || [];
+
+				if (currentStock && Array.isArray(currentStock) && currentStock.length > 0) {
+					productoSelect.innerHTML = currentStock.map(p => 
+						`<option value="${p.id}">${p.nombre_producto.toUpperCase()} (Stock: ${p.stock_actual})</option>`
+					).join('');
+				} else {
+					productoSelect.innerHTML = '<option value="">No hay productos cargados en Stock</option>';
+				}
+			} else {
+				if (camposCompra) camposCompra.classList.add('hidden');
+				if (containerDesc) containerDesc.classList.remove('opacity-40');
+				if (descInput) descInput.required = true;
+			}
+		};
+	</script>
+
 </body>
 </html>
