--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@
 	<!-- Script fuera para que tome la lista de alumnos -->
 	<script src="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/script.js"></script>
 
-	<!-- <script>
+	<script>
 		window.toggleCamposCompra = function(tipo) {
 			const camposCompra = document.getElementById('campos-compra-mercaderia');
 			const containerDesc = document.getElementById('container-desc-gasto');
@@ -1341,7 +1341,7 @@
 				if (descInput) descInput.required = true;
 			}
 		};
-	</script> -->
+	</script> 
 
 </body>
 </html>
