--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
 					</div>
 				</div>
 				
-				<!-- GRILLA DEL CALENDARIO CORREGIDA -->
+				<!-- GRILLA DEL CALENDARIO: Ahora el JS inyectará las columnas correctamente -->
 				<div class="calendar-container h-[700px] overflow-auto custom-scrollbar" id="calendar-grid">
 					<!-- El JS inyectará las columnas con fechas aquí -->
 				</div>
