--- a/index.html
+++ b/index.html
@@ -772,8 +772,8 @@
 					</div>
 				</div>
 				
-				<!-- GRILLA DEL CALENDARIO: Ahora el JS inyectará las columnas correctamente -->
-				<div class="calendar-container h-[700px] overflow-auto custom-scrollbar" id="calendar-grid">
+				<!-- GRILLA DEL CALENDARIO (Agregadas clases grid para columnas) -->
+				<div class="calendar-container h-[700px] overflow-y-auto custom-scrollbar grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6 gap-4 pb-10" id="calendar-grid">
 					<!-- El JS inyectará las columnas con fechas aquí -->
 				</div>
 			</div>
