--- a/index.html
+++ b/index.html
@@ -1350,5 +1350,9 @@
 		};
 	</script>
 
+	<a href="https://wa.me/TUNUMERODEWHATSAPP" class="whatsapp-float" target="_blank">
+    	<i data-lucide="message-circle"></i>
+	</a>
+
 </body>
 </html>
