--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/style.css">
 	<link rel="icon" type="image/png" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
 	<link rel="apple-touch-icon" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
+
+	<!-- STYLE PARA VERLO LOCAL -->
+	<link rel="stylesheet" href="style.css">
+
+	<!-- STYLE PARA VERLO LOCAL -->
+	<script src="script.js"></script>
+
 </head>
 <body class="flex h-screen w-screen overflow-hidden text-left">
 
@@ -764,7 +771,7 @@
 
             <div id="view-calendario" class="view-content">
 				<div class="flex justify-between items-center mb-10">
-					<h3 class="text-3xl font-black italic uppercase text-left">Agenda Vikinga</h3>
+					<h3 class="text-3xl font-black italic uppercase text-left">Calendario de Clases</h3>
 					<div class="flex gap-4">
 						<div class="flex bg-white/5 p-1 rounded-2xl border border-white/5">
 							<button onclick="renderCalendar()" class="px-6 py-2 bg-red-600 text-black rounded-xl text-[11px] font-black uppercase italic hover:scale-105 transition-transform">Semana Actual</button>
