--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
 
             <div id="view-calendario" class="view-content">
 				<div class="flex justify-between items-center mb-10">
-					<h3 class="text-3xl font-black italic uppercase text-left">Calendario de Clases</h3>
+					<h3 class="text-3xl font-black italic uppercase text-left">Agenda Vikinga</h3>
 					<div class="flex gap-4">
 						<div class="flex bg-white/5 p-1 rounded-2xl border border-white/5">
 							<button onclick="renderCalendar()" class="px-6 py-2 bg-red-600 text-black rounded-xl text-[11px] font-black uppercase italic hover:scale-105 transition-transform">Semana Actual</button>
