--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <title>GYMFIT PRO</title>
-	<link rel="stylesheet" href="https://raw.githubusercontent.com/vikingo-44/Software-Gym/refs/heads/main/style.css">
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/style.css"> -->
 
-
+	<link rel="stylesheet" href="style.css?v=1.1">
 
 	<link rel="icon" type="image/png" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
 	<link rel="apple-touch-icon" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
@@ -1311,7 +1311,9 @@
 		<div id="mobile-overlay" class="sidebar-overlay" onclick="toggleMobileMenu()"></div>
 
 	<!-- Script fuera para que tome la lista de alumnos -->
-	<script src="https://raw.githubusercontent.com/vikingo-44/Software-Gym/refs/heads/main/script.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/script.js"></script> -->
+
+	<script src="script.js?v=1.1"></script>
 
 	<script>
 		window.toggleCamposCompra = function(tipo) {
