--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <title>GYMFIT PRO</title>
-	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/style.css"> -->
-
-	<link rel="stylesheet" href="style.css?v=1.1">
-
+	<link rel="stylesheet" href="https://github.com/vikingo-44/Software-Gym/blob/main/style.css?raw=true">
 	<link rel="icon" type="image/png" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
 	<link rel="apple-touch-icon" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
 </head>
@@ -1311,9 +1308,7 @@
 		<div id="mobile-overlay" class="sidebar-overlay" onclick="toggleMobileMenu()"></div>
 
 	<!-- Script fuera para que tome la lista de alumnos -->
-	<!-- <script src="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/script.js"></script> -->
-
-	<script src="script.js?v=1.1"></script>
+	<script src="https://github.com/vikingo-44/Software-Gym/blob/main/script.js?raw=true"></script>
 
 	<script>
 		window.toggleCamposCompra = function(tipo) {
