--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <title>GYMFIT PRO</title>
-	<link rel="stylesheet" href="https://github.com/vikingo-44/Software-Gym/blob/main/style.css?raw=true">
+	<link rel="stylesheet" href="https://raw.githubusercontent.com/vikingo-44/Software-Gym/refs/heads/main/style.css">
 	<link rel="icon" type="image/png" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
 	<link rel="apple-touch-icon" href="https://github.com/vikingo-44/Software-Gym/blob/main/icono2.png?raw=true">
 </head>
@@ -1308,7 +1308,7 @@
 		<div id="mobile-overlay" class="sidebar-overlay" onclick="toggleMobileMenu()"></div>
 
 	<!-- Script fuera para que tome la lista de alumnos -->
-	<script src="https://github.com/vikingo-44/Software-Gym/blob/main/script.js?raw=true"></script>
+	<script src="https://raw.githubusercontent.com/vikingo-44/Software-Gym/refs/heads/main/script.js"></script>
 
 	<script>
 		window.toggleCamposCompra = function(tipo) {
